# browser-harness

./: .gitignore  README.md  SKILL.md  admin.py  common.py  daemon.py  helpers.py  install.md  pyproject.toml
domain-skills/_pre-livestream-backup/airbnb/: search.md
domain-skills/_pre-livestream-backup/google-flights/: search.md
domain-skills/opentable/: booking.md
